--- a/package.json
+++ b/package.json
@@ -23,26 +23,25 @@
   "repository": "zentrick/alpn-agent",
   "bugs": "https://github.com/zentrick/alpn-agent/issues",
   "dependencies": {
-    "debug": "^3.1.0",
-    "lru-cache": "^4.1.3"
+    "debug": "^4.1.1",
+    "lru-cache": "^5.1.1"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "get-port": "^4.0.0",
-    "nyc": "^11.7.1",
-    "pem": "^1.12.5",
-    "standard": "^11.0.1",
+    "ava": "^1.0.1",
+    "get-port": "^4.1.0",
+    "nyc": "^13.1.0",
+    "pem": "^1.13.2",
+    "standard": "^12.0.1",
     "tap-xunit": "^2.3.0"
   },
   "ava": {
     "files": [
       "test/*.js"
     ],
-    "source": [
+    "sources": [
       "lib/*.js",
       "index.js"
-    ],
-    "babel": "inherit"
+    ]
   },
   "nyc": {
     "all": true,
