--- a/packages/h2-pooled-session/package.json
+++ b/packages/h2-pooled-session/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zentrick/h2-pool",
+  "name": "@zentrick/h2-pooled-session",
   "version": "0.0.0",
   "main": "index.js",
   "author": "Zentrick nv (https://www.zentrick.com/)",
@@ -17,8 +17,7 @@
   "repository": "zentrick/alpn-agent",
   "bugs": "https://github.com/zentrick/alpn-agent/issues",
   "dependencies": {
-    "@zentrick/h2-pooled-session": "^0.0.0",
-    "debug": "^4.1.1",
-    "p-defer": "^1.0.0"
-  }
+    "@zentrick/h2-util": "^0.0.0"
+  },
+  "devDependencies": {}
 }
