--- a/packages/h2-alpn/package.json
+++ b/packages/h2-alpn/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zentrick/h2-pool",
+  "name": "@zentrick/h2-alpn",
   "version": "0.0.0",
   "main": "index.js",
   "author": "Zentrick nv (https://www.zentrick.com/)",
@@ -17,8 +17,10 @@
   "repository": "zentrick/alpn-agent",
   "bugs": "https://github.com/zentrick/alpn-agent/issues",
   "dependencies": {
-    "@zentrick/h2-pooled-session": "^0.0.0",
-    "debug": "^4.1.1",
+    "@zentrick/h2-util": "^0.0.0",
+    "@zentrick/tls-session-cache": "^0.0.0"
+  },
+  "devDependencies": {
     "p-defer": "^1.0.0"
   }
 }
