--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "devDependencies": {
     "ava": "^1.0.1",
     "get-port": "^4.1.0",
+    "got": "^9.5.0",
+    "http2-wrapper": "^0.4.2",
     "nyc": "^13.1.0",
     "pem": "^1.13.2",
+    "resolve-alpn": "^1.0.0",
     "standard": "^12.0.1",
     "tap-xunit": "^2.3.0"
   },
