--- a/packages/h2-alpn/package.json
+++ b/packages/h2-alpn/package.json
@@ -18,7 +18,8 @@
   "bugs": "https://github.com/zentrick/alpn-agent/issues",
   "dependencies": {
     "@zentrick/h2-util": "^0.0.0",
-    "@zentrick/tls-session-cache": "^0.0.0"
+    "@zentrick/tls-session-cache": "^0.0.0",
+    "debug": "^4.1.1"
   },
   "devDependencies": {
     "p-defer": "^1.0.0"
