--- a/packages/h2-pooled-session/package.json
+++ b/packages/h2-pooled-session/package.json
@@ -17,7 +17,10 @@
   "repository": "zentrick/alpn-agent",
   "bugs": "https://github.com/zentrick/alpn-agent/issues",
   "dependencies": {
-    "@zentrick/h2-util": "^0.0.0"
+    "@zentrick/h2-util": "^0.0.0",
+    "debug": "^4.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "p-defer": "^1.0.0"
+  }
 }
