--- a/packages/h2-util/package.json
+++ b/packages/h2-util/package.json
@@ -16,6 +16,9 @@
   ],
   "repository": "zentrick/alpn-agent",
   "bugs": "https://github.com/zentrick/alpn-agent/issues",
-  "dependencies": {},
+  "dependencies": {
+    "debug": "^4.1.1",
+    "p-defer": "^1.0.0"
+  },
   "devDependencies": {}
 }
